fix overflow on header

--- a/assets/sass/_page_styles.scss
+++ b/assets/sass/_page_styles.scss
@@ -9,6 +9,8 @@
     align-items: center;
     justify-content: center;
 
+    overflow: hidden;
+
     h1, h2, h3 {
       width:80%;
       padding-left:20px;
